[gd_scene load_steps=17 format=3 uid="uid://c4eybt8b7lg5f"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_8tnhm"]
[ext_resource type="Script" path="res://creator/selection/inspector/inspector.gd" id="2_67xpc"]
[ext_resource type="PackedScene" uid="uid://c3n3csc8l72co" path="res://creator/common/creator_title_tab.tscn" id="3_h1111"]
[ext_resource type="PackedScene" uid="uid://b58iveuspbtyj" path="res://ui/button_sound/button_sound.tscn" id="3_jmcsa"]
[ext_resource type="Texture2D" uid="uid://d3wol5dxj0fgk" path="res://ui/art/asset_tool.svg" id="3_t2fpk"]
[ext_resource type="Texture2D" uid="uid://cwinr5i6f8577" path="res://creator/selection/scene_hierarchy/icons/script_tab_icon.svg" id="4_bow2u"]
[ext_resource type="Texture2D" uid="uid://cpsccutf8fjuo" path="res://ui/art/assets_filled.svg" id="5_btxan"]
[ext_resource type="PackedScene" uid="uid://b06ajgyxe10gm" path="res://creator/selection/inspector/nodes/node_create_button.tscn" id="6_b0i6d"]
[ext_resource type="Texture2D" uid="uid://6y844f1nxa7y" path="res://ui/art/material.svg" id="6_g0w0h"]
[ext_resource type="PackedScene" uid="uid://cdxdqom4buex" path="res://creator/common/delete_dialog/delete_dialog.tscn" id="8_huk7i"]
[ext_resource type="AudioStream" uid="uid://b573mbvf3na75" path="res://audio/select_tab.wav" id="10_ndgbo"]
[ext_resource type="PackedScene" uid="uid://chbho7riip6y" path="res://creator/selection/inspector/primitive/inspector_material.tscn" id="11_6a5m6"]
[ext_resource type="Texture2D" uid="uid://dekum7rgbj6f2" path="res://ui/art/select.svg" id="11_i5akb"]
[ext_resource type="PackedScene" uid="uid://bet1cctglmseb" path="res://creator/tools/material_creator/material_inspector.tscn" id="11_qoswr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fb4p1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i8nmt"]

[node name="Inspector" type="Panel"]
custom_minimum_size = Vector2(400, 100)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -392.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_8tnhm")
script = ExtResource("2_67xpc")
_tab_properties_icon = ExtResource("3_t2fpk")
_tab_scripting_icon = ExtResource("4_bow2u")
_tab_nodes_icon = ExtResource("5_btxan")
_tab_materials_icon = ExtResource("6_g0w0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_layout_mode = 1

[node name="CreatorTitleTab" parent="VBoxContainer" instance=ExtResource("3_h1111")]
layout_mode = 2
primary_name = "Inspector:"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/side_margin = 0
tab_alignment = 1
current_tab = 0

[node name="Properties" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Properties"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 7
metadata/_edit_layout_mode = 1

[node name="Categories" type="VBoxContainer" parent="VBoxContainer/TabContainer/Properties/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Scripting" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Scripting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 7
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Scripting/MarginContainer"]
layout_mode = 2

[node name="ScriptInstances" type="VBoxContainer" parent="VBoxContainer/TabContainer/Scripting/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Scripting/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddScriptButton" type="Button" parent="VBoxContainer/TabContainer/Scripting/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Script"

[node name="Materials" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Materials"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 8
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Materials/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SurfaceLabelHolder" type="MarginContainer" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = -4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceLabelHolder"]
layout_mode = 2

[node name="SurfaceLabel" type="Label" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceLabelHolder/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Object Surface"
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="SurfacePickButton" type="Button" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceLabelHolder/HBoxContainer"]
custom_minimum_size = Vector2(45, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/icon_hover_pressed_color = Color(0.145098, 0.501961, 0.984314, 1)
theme_override_colors/icon_hover_color = Color(0.145098, 0.501961, 0.984314, 1)
theme_override_colors/icon_focus_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/icon_normal_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/font_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/font_focus_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.501961, 0.984314, 1)
theme_override_colors/font_hover_pressed_color = Color(0.145098, 0.501961, 0.984314, 1)
theme_override_constants/icon_max_width = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_fb4p1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i8nmt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i8nmt")
toggle_mode = true
button_pressed = true
text = "Pick"
icon = ExtResource("11_i5akb")
icon_alignment = 2
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 8

[node name="SurfacesItemList" type="ItemList" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 12
allow_rmb_select = true
text_overrun_behavior = 0
item_count = 2
fixed_icon_size = Vector2i(14, 14)
item_0/text = "Test"
item_0/icon = ExtResource("6_g0w0h")
item_1/text = "Test2"
item_1/icon = ExtResource("6_g0w0h")

[node name="SurfaceMaterial" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer" instance=ExtResource("11_6a5m6")]
layout_mode = 2
label_text = "Material"

[node name="Label" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceMaterial/LabelHolder" index="0"]
text = "Material"

[node name="MaterialCreatorButton" type="Button" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceMaterial"]
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ButtonLarge"
text = "Creator"
icon = ExtResource("6_g0w0h")
icon_alignment = 2
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SurfaceLabelHolder2" type="MarginContainer" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = -8

[node name="SurfaceLabel" type="Label" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceLabelHolder2"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Material Properties"
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="MaterialInspector" parent="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer" instance=ExtResource("11_qoswr")]
layout_mode = 2

[node name="Nodes" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Nodes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 7
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Nodes/MarginContainer"]
layout_mode = 2

[node name="ModelNodes" type="VBoxContainer" parent="VBoxContainer/TabContainer/Nodes/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="ExtraNodeCreateButton" parent="VBoxContainer/TabContainer/Nodes/MarginContainer/VBoxContainer" instance=ExtResource("6_b0i6d")]
layout_mode = 2

[node name="ButtonSound" parent="." instance=ExtResource("3_jmcsa")]

[node name="DeleteDialog" parent="." instance=ExtResource("8_huk7i")]

[node name="AudioStreamPlayerTabChanged" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ndgbo")
volume_db = -10.0

[connection signal="tab_changed" from="VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Scripting/MarginContainer/VBoxContainer/AddScriptButton" to="." method="_on_add_script_button_pressed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceLabelHolder/HBoxContainer/SurfacePickButton" to="." method="_on_surface_pick_button_toggled"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/MarginContainer/SurfacesItemList" to="." method="_on_surfaces_item_list_item_selected"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceMaterial" to="." method="_on_surface_material_value_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceMaterial/MaterialCreatorButton" to="." method="_on_material_creator_button_pressed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_delete_dialog_confirmed"]

[editable path="VBoxContainer/TabContainer/Materials/MarginContainer/VBoxContainer/SurfaceMaterial"]
